Initial import from lab-l8 -> metawattgc; rebrand packages and HTML; add EnergyTag TypeScript types.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title and description -->
-    <title>Lab L-7 - ToDo List</title>
-    <meta name="description" content="Use Pushdrop to create a ToDo List" />
+    <title>MetawattGC - EnergyTag Granular Certificates</title>
+    <meta name="description" content="MetawattGC: Explore and manage EnergyTag-compliant Granular Certificates" />
     <meta name="theme-color" content="#121212" />
 
     <!-- Roboto Font (matches MUI default) -->
